# Hello

./: .gitignore  README.md
C++/: README.md  TODO.md
C++/20/chrono/: README.md
C++/20/coroutine/: README.md
C++/Reference/UtilitiesLibrary/: exchange.md
C++/Reference/language/: noexcept.md
C++/Reference/utility/: exchange.md
CMake/: .gitignore
CMake/ModernCMake/Ch01.IntroductionToTheBasics/: 00.Introduction.md
CMake/Tutorial/: README.md
CMake/Tutorial/src/: README.md  S03.Adding Usage Requirements for a Library.md  S04.Installing and Testing.md  S05.Adding System Introspection.md  S06.Adding a Custom Command and Generated File.md  S07.Packaging an Installer.md  S08.Adding Support for a Testing Dashboard.md  S09.Selecting Static or Shared Libraries.md  S10.Adding Generator Expressions.md  S11.Adding Export Configuration.md  S12.Packaging Debug and Release.md  STEP01. A Basic Starting Point.md  STEP01.A Basic Starting Point.md  STEP02.Adding a Library.md
CMake/Tutorial/src/Step03/MathFunctions/: CMakeLists.txt
GitBook/: README.md  SUMMARY.md
GitBook/Ch01/: README.md
Go/GoProgrammingLanguage/: .gitignore  Ch01.md  Ch02.md  Ch03.md  Ch04.md  Ch05.md  Ch06.md  Ch07.md  Ch08.md  Ch09.md  Ch10.md  Ch11.md  README.md  go.sum
Go/GoProgrammingLanguage/Ch03/: surface.go
Go/GoProgrammingLanguage/Ch04/: format.go  main.go  struct.go
Go/GoProgrammingLanguage/Ch06/: intset.go
Go/GoProgrammingLanguage/Ch08/: pipeline2.go  spinner.go  test.go
Go/Notes/: Notes.md
Swift/: README.md
Swift/TheSwiftProgrammingLanguage/: README.md
(+55 files in other folders)
